--- a/index.html
+++ b/index.html
@@ -19,151 +19,175 @@
   <body>
     <!--Navigation bar-->
     <header>
-      <nav>
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-web">Studio</span></a
-        >
-        <ul class="links">
-          <li><a href="./index.html" class="akt-link">Studio</a></li>
-          <li><a href="" class="akt-link">Portfolio</a></li>
-          <li><a href="" class="akt-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-links">
-          <li>
-            <a class="contacts-links-info" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contacts-links-info" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav>
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-web">Studio</span></a
+          >
+          <ul class="links">
+            <li><a href="./index.html" class="akt-link">Studio</a></li>
+            <li><a href="" class="akt-link">Portfolio</a></li>
+            <li><a href="" class="akt-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-links">
+            <li>
+              <a class="contacts-links-info" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts-links-info" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--Section 1 Hero image-->
       <section class="image">
-        <h1 class="image-title">Effective Solutions for Your Business</h1>
-        <button class="image-button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="image-title">Effective Solutions for Your Business</h1>
+          <button class="image-button" type="button">Order Service</button>
+        </div>
       </section>
       <!--Section 2 Strategy-->
       <section class="desc">
-        <h2>Content</h2>
-        <ul>
-          <li>
-            <h3 class="desc-title">Strategy</h3>
-            <p class="desc-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="desc-title">Punctuality</h3>
-            <p class="desc-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="desc-title">Diligence</h3>
-            <p class="desc-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="desc-title">Technologies</h3>
-            <p class="desc-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2>Content</h2>
+          <ul>
+            <li>
+              <h3 class="desc-title">Strategy</h3>
+              <p class="desc-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="desc-title">Punctuality</h3>
+              <p class="desc-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="desc-title">Diligence</h3>
+              <p class="desc-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="desc-title">Technologies</h3>
+              <p class="desc-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Section 3 Our Team-->
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-list">
-            <img src="./images/img1.jpg" alt="Designer image" width="264" />
-            <h3 class="team-title-name">Mark Guerrero</h3>
-            <p class="team-title-pos">Product Designer</p>
-          </li>
-          <li class="team-list">
-            <img
-              src="./images/img2.jpg"
-              alt="Image of the developer"
-              width="264"
-            />
-            <h3 class="team-title-name">Tom Ford</h3>
-            <p class="team-title-pos">Frontend Developer</p>
-          </li>
-          <li class="team-list">
-            <img
-              src="./images/img3.jpg"
-              alt="Image of a marketer"
-              width="264"
-            />
-            <h3 class="team-title-name">Camila Garcia</h3>
-            <p class="team-title-pos">Marketing</p>
-          </li>
-          <li class="team-list">
-            <img src="./images/img4.jpg" alt="Designer image" width="264" />
-            <h3 class="team-title-name">Daniel Wilson</h3>
-            <p class="team-title-pos">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-list">
+              <img
+                class="photo"
+                src="./images/img1.jpg"
+                alt="Designer image"
+                width="264"
+              />
+              <h3 class="team-title-name">Mark Guerrero</h3>
+              <p class="team-title-pos">Product Designer</p>
+            </li>
+            <li class="team-list">
+              <img
+                class="photo"
+                src="./images/img2.jpg"
+                alt="Image of the developer"
+                width="264"
+              />
+              <h3 class="team-title-name">Tom Ford</h3>
+              <p class="team-title-pos">Frontend Developer</p>
+            </li>
+            <li class="team-list">
+              <img
+                class="photo"
+                src="./images/img3.jpg"
+                alt="Image of a marketer"
+                width="264"
+              />
+              <h3 class="team-title-name">Camila Garcia</h3>
+              <p class="team-title-pos">Marketing</p>
+            </li>
+            <li class="team-list">
+              <img
+                class="photo"
+                src="./images/img4.jpg"
+                alt="Designer image"
+                width="264"
+              />
+              <h3 class="team-title-name">Daniel Wilson</h3>
+              <p class="team-title-pos">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Section 4 Our Portfolio-->
       <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/img5.jpg" alt="Image" width="360" />
-            <h3 class="portfolio-name">Banking App</h3>
-            <p class="portfolio-par">App</p>
-          </li>
-          <li>
-            <img src="./images/img6.jpg" alt="Image" width="360" />
-            <h3 class="portfolio-name">Cashless Payment</h3>
-            <p class="portfolio-par">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img7.jpg" alt="Image" width="360" />
-            <h3 class="portfolio-name">Meditation App</h3>
-            <p class="portfolio-par">App</p>
-          </li>
-          <li>
-            <img src="./images/img8.jpg" alt="Image" width="360" />
-            <h3 class="portfolio-name">Taxi Service</h3>
-            <p class="portfolio-par">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img9.jpg" alt="Image" width="360" />
-            <h3 class="portfolio-name">Screen Illustrations</h3>
-            <p class="portfolio-par">Design</p>
-          </li>
-          <li>
-            <img src="./images/img10.jpg" alt="Image" width="360" />
-            <h3 class="portfolio-name">Online Courses</h3>
-            <p class="portfolio-par">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img src="./images/img5.jpg" alt="Image" width="360" />
+              <h3 class="portfolio-name">Banking App</h3>
+              <p class="portfolio-par">App</p>
+            </li>
+            <li>
+              <img src="./images/img6.jpg" alt="Image" width="360" />
+              <h3 class="portfolio-name">Cashless Payment</h3>
+              <p class="portfolio-par">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/img7.jpg" alt="Image" width="360" />
+              <h3 class="portfolio-name">Meditation App</h3>
+              <p class="portfolio-par">App</p>
+            </li>
+            <li>
+              <img src="./images/img8.jpg" alt="Image" width="360" />
+              <h3 class="portfolio-name">Taxi Service</h3>
+              <p class="portfolio-par">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/img9.jpg" alt="Image" width="360" />
+              <h3 class="portfolio-name">Screen Illustrations</h3>
+              <p class="portfolio-par">Design</p>
+            </li>
+            <li>
+              <img src="./images/img10.jpg" alt="Image" width="360" />
+              <h3 class="portfolio-name">Online Courses</h3>
+              <p class="portfolio-par">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="footer-logo-web">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="footer-logo-web">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
