--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </section>
       <!--Section 3 Our Team-->
       <section class="team">
-        <div class="container">
+        <div class="container team-title-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list-container">
             <li class="team-list">
