--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
                   width="264"
                 />
 
-                <h3 class="team-title-name">Mark Guerrero</h3>
-                <p class="team-title-pos">Product Designer</p>
+                <div class="team-name">
+                  <h3 class="team-title-name">Mark Guerrero</h3>
+                  <p class="team-title-pos">Product Designer</p>
+                </div>
               </div>
             </li>
             <li class="team-list">
@@ -117,8 +119,10 @@
                   width="264"
                 />
 
-                <h3 class="team-title-name">Tom Ford</h3>
-                <p class="team-title-pos">Frontend Developer</p>
+                <div class="team-name">
+                  <h3 class="team-title-name">Tom Ford</h3>
+                  <p class="team-title-pos">Frontend Developer</p>
+                </div>
               </div>
             </li>
             <li class="team-list">
@@ -130,8 +134,10 @@
                   width="264"
                 />
 
-                <h3 class="team-title-name">Camila Garcia</h3>
-                <p class="team-title-pos">Marketing</p>
+                <div class="team-name">
+                  <h3 class="team-title-name">Camila Garcia</h3>
+                  <p class="team-title-pos">Marketing</p>
+                </div>
               </div>
             </li>
             <li class="team-list">
@@ -143,8 +149,10 @@
                   width="264"
                 />
 
-                <h3 class="team-title-name">Daniel Wilson</h3>
-                <p class="team-title-pos">UI Designer</p>
+                <div class="team-name">
+                  <h3 class="team-title-name">Daniel Wilson</h3>
+                  <p class="team-title-pos">UI Designer</p>
+                </div>
               </div>
             </li>
           </ul>
@@ -162,8 +170,10 @@
                   <img src="./images/img5.jpg" alt="Image" width="360" />
                 </div>
                 <div class="container-portfolio-content">
-                  <h3 class="portfolio-name">Banking App</h3>
-                  <p class="portfolio-par">App</p>
+                  <div class="portfolio-nampar">
+                    <h3 class="portfolio-name">Banking App</h3>
+                    <p class="portfolio-par">App</p>
+                  </div>
                 </div>
               </div>
             </li>
@@ -172,8 +182,12 @@
                 <div class="container-portfolio-card">
                   <img src="./images/img6.jpg" alt="Image" width="360" />
                 </div>
-                <h3 class="portfolio-name">Cashless Payment</h3>
-                <p class="portfolio-par">Marketing</p>
+                <div class="container-portfolio-content">
+                  <div class="portfolio-nampar">
+                    <h3 class="portfolio-name">Cashless Payment</h3>
+                    <p class="portfolio-par">Marketing</p>
+                  </div>
+                </div>
               </div>
             </li>
             <li>
@@ -181,8 +195,12 @@
                 <div class="container-portfolio-card">
                   <img src="./images/img7.jpg" alt="Image" width="360" />
                 </div>
-                <h3 class="portfolio-name">Meditation App</h3>
-                <p class="portfolio-par">App</p>
+                <div class="container-portfolio-content">
+                  <div class="portfolio-nampar">
+                    <h3 class="portfolio-name">Meditation App</h3>
+                    <p class="portfolio-par">App</p>
+                  </div>
+                </div>
               </div>
             </li>
             <li>
@@ -190,8 +208,12 @@
                 <div class="container-portfolio-card">
                   <img src="./images/img8.jpg" alt="Image" width="360" />
                 </div>
-                <h3 class="portfolio-name">Taxi Service</h3>
-                <p class="portfolio-par">Marketing</p>
+                <div class="container-portfolio-content">
+                  <div class="portfolio-nampar">
+                    <h3 class="portfolio-name">Taxi Service</h3>
+                    <p class="portfolio-par">Marketing</p>
+                  </div>
+                </div>
               </div>
             </li>
             <li>
@@ -199,8 +221,12 @@
                 <div class="container-portfolio-card">
                   <img src="./images/img9.jpg" alt="Image" width="360" />
                 </div>
-                <h3 class="portfolio-name">Screen Illustrations</h3>
-                <p class="portfolio-par">Design</p>
+                <div class="container-portfolio-content">
+                  <div class="portfolio-nampar">
+                    <h3 class="portfolio-name">Screen Illustrations</h3>
+                    <p class="portfolio-par">Design</p>
+                  </div>
+                </div>
               </div>
             </li>
 
@@ -209,8 +235,12 @@
                 <div class="container-portfolio-card">
                   <img src="./images/img10.jpg" alt="Image" width="360" />
                 </div>
-                <h3 class="portfolio-name">Online Courses</h3>
-                <p class="portfolio-par">Marketing</p>
+                <div class="container-portfolio-content">
+                  <div class="portfolio-nampar">
+                    <h3 class="portfolio-name">Online Courses</h3>
+                    <p class="portfolio-par">Marketing</p>
+                  </div>
+                </div>
               </div>
             </li>
           </ul>
