--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
       <!--Section 2 Strategy-->
       <section class="desc">
         <div class="container">
-          <h2 class="visually-hidden">Content</h2>
+          <div style="visibility: hidden">
+            <h2>Content</h2>
+          </div>
           <ul class="content-container">
             <li class="content-item">
               <h3 class="desc-title">Strategy</h3>
@@ -156,11 +158,9 @@
           <ul class="portfolio-container">
             <li>
               <img src="./images/img5.jpg" alt="Image" width="360" />
-              <div class="container-portfolio-content">
-                <div class="portfolio-nampar">
-                  <h3 class="portfolio-name">Banking App</h3>
-                  <p class="portfolio-par">App</p>
-                </div>
+              <div class="portfolio-nampar">
+                <h3 class="portfolio-name">Banking App</h3>
+                <p class="portfolio-par">App</p>
               </div>
             </li>
             <li>
