--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <!--Section 2 Strategy-->
       <section class="desc">
         <div class="container">
-          <div style="visibility: hidden">
-            <h2>Content</h2>
+          <div class="hidden">
+            <h2 class="visually-hidden">Content</h2>
           </div>
           <ul class="content-container">
             <li class="content-item">
