--- a/index.html
+++ b/index.html
@@ -156,42 +156,42 @@
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-container">
-            <li>
+            <li class="portfolio-item">
               <img src="./images/img5.jpg" alt="Image" width="360" />
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-par">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img src="./images/img6.jpg" alt="Image" width="360" />
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-par">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img src="./images/img7.jpg" alt="Image" width="360" />
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-par">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img src="./images/img8.jpg" alt="Image" width="360" />
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-par">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img src="./images/img9.jpg" alt="Image" width="360" />
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-par">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img src="./images/img10.jpg" alt="Image" width="360" />
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Online Courses</h3>
