--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             >Web<span class="logo-web">Studio</span></a
           >
           <ul class="links">
-            <li><a href="./index.html" class="akt-link">Studio</a></li>
-            <li><a href="" class="akt-link">Portfolio</a></li>
-            <li><a href="" class="akt-link">Contacts</a></li>
+            <li class="links-item"><a href="./index.html" class="akt-link">Studio</a></li>
+            <li class="links-item"><a href="" class="akt-link">Portfolio</a></li>
+            <li class="links-item"></li><a href="" class="akt-link">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
@@ -57,9 +57,7 @@
       <!--Section 2 Strategy-->
       <section class="desc">
         <div class="container">
-          <div class="hidden">
-            <h2 class="visually-hidden">Content</h2>
-          </div>
+          <h2 class="visually-hidden">Content</h2>
           <ul class="content-container">
             <li class="content-item">
               <h3 class="desc-title">Strategy</h3>
