--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
             >Web<span class="logo-web">Studio</span></a
           >
           <ul class="links">
-            <li class="links-item"><a href="./index.html" class="akt-link">Studio</a></li>
-            <li class="links-item"><a href="" class="akt-link">Portfolio</a></li>
-            <li class="links-item"></li><a href="" class="akt-link">Contacts</a></li>
+            <li class="links-item">
+              <a href="./index.html" class="akt-link">Studio</a>
+            </li>
+            <li class="links-item">
+              <a href="" class="akt-link">Portfolio</a>
+            </li>
+            <li class="links-item"><a href="" class="akt-link">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
