--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             <li class="links-item">
               <a href="" class="akt-link">Portfolio</a>
             </li>
-            <li class="links-item"><a href="" class="akt-link">Contacts</a></li>
+            <li class="links-item">
+              <a href="" class="akt-link">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="contacts">
