--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
           >
           <ul class="links">
             <li class="links-item">
-              <a href="./index.html" class="akt-link">Studio</a>
+              <a class="akt-link" href="./index.html">Studio</a>
             </li>
             <li class="links-item">
-              <a href="" class="akt-link">Portfolio</a>
+              <a class="akt-link" href="">Portfolio</a>
             </li>
             <li class="links-item">
-              <a href="" class="akt-link">Contacts</a>
+              <a class="akt-link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
