--- a/index.html
+++ b/index.html
@@ -102,12 +102,7 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list-container">
             <li class="team-list">
-              <img
-                class="photo"
-                src="./images/img1.jpg"
-                alt="Designer image"
-                width="264"
-              />
+              <img src="./images/img1.jpg" alt="Designer image" width="264" />
               <div class="team-name">
                 <h3 class="team-title-name">Mark Guerrero</h3>
                 <p class="team-title-pos">Product Designer</p>
@@ -115,7 +110,6 @@
             </li>
             <li class="team-list">
               <img
-                class="photo"
                 src="./images/img2.jpg"
                 alt="Image of the developer"
                 width="264"
@@ -128,7 +122,6 @@
             </li>
             <li class="team-list">
               <img
-                class="photo"
                 src="./images/img3.jpg"
                 alt="Image of a marketer"
                 width="264"
@@ -140,12 +133,7 @@
               </div>
             </li>
             <li class="team-list">
-              <img
-                class="photo"
-                src="./images/img4.jpg"
-                alt="Designer image"
-                width="264"
-              />
+              <img src="./images/img4.jpg" alt="Designer image" width="264" />
               <div class="team-name">
                 <h3 class="team-title-name">Daniel Wilson</h3>
                 <p class="team-title-pos">UI Designer</p>
