--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main>
       <!--Section 1 Hero image-->
       <section class="image">
-        <div class="container hero-image-container">
+        <div class="container">
           <h1 class="image-title">Effective Solutions for Your Business</h1>
           <button class="image-button" type="button">Order Service</button>
         </div>
